<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.cloudsimplus</groupId>
    <artifactId>cloudsimplus-examples</artifactId>
    <!--
    The module version defines the version of CloudSim Plus to be used.
    This way, it cannot be a version number which doesn't exist for CloudSim Plus.
    -->
    <version>9.0.0-snapshot</version>

    <name>CloudSim Plus Examples</name>
    <description>
        Ready-to-run examples of how to use CloudSim Plus API.
        It is an excellent start point to learn how to implement cloud computing
        simulations using CloudSim Plus.
        All examples of CloudSim Plus exclusive features are inside the org.cloudsimplus.examples package.
        Each Java class with a main method is a different example.
    </description>

    <inceptionYear>2015</inceptionYear>

    <licenses>
        <license>
            <name>GPLv3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Manoel Campos da Silva Filho</name>
            <email>manoelcampos@gmail.com</email>
            <organization>Instituto Federal de Educação Ciência e Tecnologia do Tocantins (IFTO)</organization>
            <organizationUrl>http://www.ifto.edu.br</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:cloudsimplus/cloudsimplus-examples.git</connection>
        <developerConnection>scm:git:git@github.com:cloudsimplus/cloudsimplus-examples.git</developerConnection>
        <url>git@github.com:cloudsimplus/cloudsimplus-examples.git</url>
    </scm>

    <issueManagement>
        <url>https://github.com/cloudsimplus/cloudsimplus-examples/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <license-maven-plugin.version>5.0.0</license-maven-plugin.version>
        <!-- License file to be used by the com.mycila.license-maven-plugin -->
        <copyrightfile>../COPYRIGHT</copyrightfile>
        <maven.compiler.release>25</maven.compiler.release>
        <logback.version>1.5.18</logback.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
            </plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<!-- Adds dependencies to classpath into the manifest file inside the jar !-->
							<addClasspath>true</addClasspath>

							<!-- Defines that the dependencies will follow the same
							 hierarchical directory structure of a maven repository !-->
							<classpathLayoutType>repository</classpathLayoutType>

							<!-- Defines the root folder where the dependencies are.
							 In this case is the root of the local maven repository. !-->
							<classpathPrefix>${user.home}/.m2/repository/</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>

            <!-- Creates an "uber jar" that includes all external dependencies
            inside it. This way, the jar can be run directly in any
            computer with a regular JVM installed. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- Keep the original jar file and generate a new shaded jar (the uber jar) -->
                    <shadedArtifactAttached>true</shadedArtifactAttached>
                    <!-- The suffix to add to the shaded jar -->
                    <shadedClassifierName>with-dependencies</shadedClassifierName>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-maven-plugin.version}</version>
                <configuration>
                    <header>${copyrightfile}</header>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>

                    <strictCheck>true</strictCheck>
                    <failIfMissing>false</failIfMissing>
                    <excludes>
                        <exclude>**/src/main/resources/**</exclude>
                        <exclude>**/src/main/java/org/cloudbus/**</exclude>
                        <exclude>**/*.md</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.brite</exclude>
                        <exclude>**/package-info.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.cloudsimplus</groupId>
            <artifactId>cloudsimplus</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <!-- Automatically includes slf4j-api 2.0 -->
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
    </dependencies>
</project>
